# Aegis

./: .gitignore  .gitleaks.toml  .golangci.yml  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_uncached.txt  .graphifyignore  AGENTS.md  AMBIENT_DROP_DIAG.md  CAP_EPERM_DIAG.md  HANDOFF.md  HANDOFF_CURRENT.md  KNOWN_LIMITATIONS.md  Makefile  PASS_A_SUMMARY.md  PASS_B_DEMO_RUN.md  PASS_B_SUMMARY.md  README.md  RECON_EGRESS.md  SECURITY.md  TASKS.md  TECH_DEBT.md  THREAT_MODEL.md  go.mod  go.sum
agent_logs/: 2026-03-21_agent01.md  INDEX.md  current.md
ai/: ARCHITECTURE.md  CURRENT_PHASE.md  DECISION_LOG.md  EXECUTION_LOG.md  HANDOFF.md
configs/: allowlist-validation-policy.yaml  default-policy.yaml
db/: schema.sql
docs/: api.md  api_contract.md  architecture.md  baseline.md  canonical-demo.md  canonical-demos.md  demo-asset-checklist.md  demo-exfiltration.md  demo-guide.md  governed-actions-next-steps.md  known-issues.md  mcp_server.md  narrative-outline.md  openapi.json  openclaw-integration.md  outreach-messages.md  pilot-offer.md  problem-statement.md  proof-pipeline.md  proving-ground.md  quickstart.md  receipt-model.md  receipt-schema.md  security-faq.md  setup-local.md  target-profile.md  troubleshooting.md  trust-model.md  validation-decision-rule.md
graphify-out/: .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunks.json  .graphify_chunks_retry.json  .graphify_chunks_retry2.json  GRAPH_REPORT.md  graph.html  graph.json
guest-proxy/: go.mod  main.go
guest-runner/: broker_proxy.go  go.mod  host_action_client.go  main.go  main_test.go  runtime_sensor.go  runtime_sensor_test.go  (+2 more)
sdk/python/: .coverage  README.md  pyproject.toml
sdk/python/aegis/: __init__.py  _http.py  capabilities.py  client.py  errors.py  events.py  intent.py  receipt.py  request.py  result.py  types.py  verifier.py
sdk/python/aegis_sdk.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/examples/: _broker_smoke_common.py  authenticated.py  broker_allowed.py  broker_denied.py  health.py  run_code.py  run_stream.py  verify_receipt.py
sdk/python/tests/: test_broker_smoke.py  test_sdk.py
(+307 files in other folders)
